2010-03-26  Atsushi Enomoto  <atsushi@ximian.com>

	* Message.cs : fix explanation on CreateMessage() overloads.

2010-03-26  Atsushi Enomoto  <atsushi@ximian.com>

	* MessageFault.cs : Write Subcode element correctly and fix wrong
	  Code/Value/Subcode element relationship. Give better error message.

2010-03-26  Atsushi Enomoto  <atsushi@ximian.com>

	* HttpRequestChannel.cs : ok, no need for conditional code path.

2010-03-26  Atsushi Enomoto  <atsushi@ximian.com>

	* AddressingVersion.cs : add fault action namespace.

2010-03-26  Sebastien Pouliot  <sebastien@ximian.com>

	* HttpRequestChannel.cs: There is no WebHeaderCollection.Add 
	method in SL API

2010-03-26  Atsushi Enomoto  <atsushi@ximian.com>

	* MessageImpl.cs : pass IsFault argument in OnCreateBufferedCopy().

2010-03-26  Atsushi Enomoto  <atsushi@ximian.com>

	* HttpRequestContext.cs, AspNetRequestContext.cs : return HTTP 500
	  for fault message.

2010-03-26  Atsushi Enomoto  <atsushi@ximian.com>

	* HttpRequestChannel.cs : create HttpResponseMessageProperty.

2010-03-25  Atsushi Enomoto  <atsushi@ximian.com>

	* HttpRequestContext.cs : removed HTTP status rewriting for
	  commented reason.

2010-03-25  Atsushi Enomoto  <atsushi@ximian.com>

	* HttpRequestChannel.cs : handle only 4xx errors as to not process
	  content stream.

2010-03-25  Atsushi Enomoto  <atsushi@ximian.com>

	* MessageFault.cs : do not use SOAP11 namespace for fault contents.

2010-03-24  Atsushi Enomoto  <atsushi@ximian.com>

	* ReplyChannelBase.cs, HttpReplyChannel.cs : add some locking.
	  Patch by Matt Dargavel.

2010-03-24  Atsushi Enomoto  <atsushi@ximian.com>

	* HttpListenerManager.cs : use lock object which is subject to
	  change. Fix by Matt Dargavel.

2010-03-24  Atsushi Enomoto  <atsushi@ximian.com>

	* HttpListenerManager.cs : remove consumed HttpListenerContext from
	  the pending queue. Compare "wsdl" request in case insensitive
	  manner. Patch by Matt Dargavel.

2010-03-24  Atsushi Enomoto  <atsushi@ximian.com>