@@ -1,5 +1,10 @@
 2010-03-26  Atsushi Enomoto  <atsushi@ximian.com>
 
+	* FaultConverter.cs : do implement OnTryCreateFaultMessage() to work
+	  with certain Exception types.
+
+2010-03-26  Atsushi Enomoto  <atsushi@ximian.com>
+
 	* Message.cs : fix explanation on CreateMessage() overloads.
 
 2010-03-26  Atsushi Enomoto  <atsushi@ximian.com>
